--- a/proba_aq.ipynb
+++ b/proba_aq.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "req_template = 'https://apidata.mos.ru/v1/{}/?api_key={}'\n",
     "\n",
-    "response = requests.get(req_template.format('datasets/912/rows', apiKey)) # это датасет про парки Москвы"
+    "response = requests.get(req_template.format('datasets/912/rows', apiKey)) # это датасет про все места для пикников в Москве"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Отлично, у нас есть данные про 156 парков в таком формате\n",
+    "Отлично, у нас есть данные про 156 потенциальных мест для пикника в таком формате\n",
     "\n",
     "Сохраним это куда-нибудь."
    ]
@@ -345,7 +345,7 @@
     "plt.plot(result[:,0], result[:,1], 'v', markersize=10, color='black')\n",
     "plt.plot(*me_geo, '*', markersize=15, color='black')\n",
     "plt.annotate('дом', xy=me_geo, xytext=(-15, -20), textcoords='offset points')\n",
-    "plt.annotate('каток!', xy=result[0], xytext=(-20, 10), textcoords='offset points')\n",
+    "plt.annotate('пикник!', xy=result[0], xytext=(-20, 10), textcoords='offset points')\n",
     "plt.grid(True)\n",
     "plt.xlabel('долгота')\n",
     "plt.ylabel('широта')\n",
